--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Personal Portfolio</title>
 
+    <!-- Boxicons Link -->
+     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
