--- a/index.html
+++ b/index.html
@@ -7,13 +7,39 @@
     <title>3D Personal Portfolio</title>
 
     <!-- Boxicons Link -->
-     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+
+    <!--########## Navbar ##########-->
+    <nav class="nav">
+        <ul class="nav-list">
+            <li class="active">
+                <i class='bx bx-home-alt'></i>
+                <span class="tooltip">Home</span>
+            </li>
+            <li>
+                <i class='bx bx-user'></i>
+                <span class="tooltip">About</span>
+            </li>
+            <li>
+                <i class='bx bx-detail'></i>
+                <span class="tooltip">Resume</span>
+            </li>
+            <li>
+                <i class='bx bx-briefcase'></i>
+                <span class="tooltip">Portfolio</span>
+            </li>
+            <li>
+                <i class='bx bx-envelope'></i>
+                <span class="tooltip">Contact</span>
+            </li>
+        </ul>
+    </nav>
 
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
